remove ageDistance